Additional fixes for https://bugs.eclipse.org/bugs/show_bug.cgi?id=568265
Change-Id: I0000000000000000000000000000000000000000